--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
 
 <body>
     <div class="container">
+        <h1 class="title">FizzBuzzDOM</h1>
         <div id="box-container">
+
 
         </div>
 
     </div>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
