--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
 <body>
     <div class="container">
         <h1 class="title">FizzBuzzDOM</h1>
-        <div id="box-container">
-
-
-        </div>
-
+        <div id="box-container"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
